modify : id값 수정, cursor 수정

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                                         <h2 class="itemName">유가네 닭갈비</h2>
                                         <p class="itemAd">경북 경산시 하양읍 문화로 2 2층 유가네닭갈비 경산하양점</p>
                                     </span>
-                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + a.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -53,7 +53,7 @@
                                         <h2 class="itemName">하양연가</h2>
                                         <p class="itemAd">경북 경산시 하양읍 대경로 669-3</p>
                                     </span>
-                                    <p class="aboutBtn" onclick="location.href='about1.html?' + y.value">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + b.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -65,7 +65,7 @@
                                         <h2 class="itemName">엄마 떡볶이</h2>
                                         <p class="itemAd">경북 경산시 하양읍 하양로 96-1</p>
                                     </span>
-                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + c.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -77,7 +77,7 @@
                                         <h2 class="itemName">명랑 핫도그</h2>
                                         <p class="itemAd">경북 경산시 하양읍 하양로 74-1</p>
                                     </span>
-                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + d.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
