--- a/about2.html
+++ b/about2.html
@@ -42,7 +42,7 @@
                                         <h2 class="itemName">퀴다</h2>
                                         <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
                                     </span>
-                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + a.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -52,9 +52,9 @@
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">이상한키친</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 문화로 10</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + b.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -63,5 +63,6 @@
             </div>
         </div>
         <script src="./js/index.js" charset="UTF-8"></script>
+        <script src="./js/about.js" charset="UTF-8"></script>
     </body>
 </html>
