--- a/about3.html
+++ b/about3.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
-                        <li class="fooditem" id="k" value="1">
+                        <li class="fooditem" id="a" value="1">
                             <figure class="fig">
                                 <img src="./imges/1058.jpg"/>
                                 <figcaption>
@@ -42,79 +42,79 @@
                                         <h2 class="itemName">1058라멘</h2>
                                         <p class="itemAd">경북 경산시 하양읍 하양로 63 2층</p>
                                     </span>
-                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + a.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="b" value="3">
                             <figure class="fig">
                                 <img src="./imges/델꼬.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">델꼬</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양역길 27</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + b.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="c" value="5">
                             <figure class="fig">
                                 <img src="./imges/미미관.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">미미관 마라탕</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 문화로 16-1 1층</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + c.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="d" value="8">
                             <figure class="fig">
                                 <img src="./imges/스시카츠.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">스시카츠</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 669-6 1층</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + d.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="e" value="12">
                             <figure class="fig">
                                 <img src="./imges/타코파파.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">타코파파</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양로 53</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + e.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="f" value="13">
                             <figure class="fig">
                                 <img src="./imges/하양돈부리.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">하양돈부리</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양역길 18 하양돈부리</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' +f.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="g" value="15">
                             <figure class="fig">
                                 <img src="./imges/혼샤브.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">혼샤브</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 669-6 2층 혼샤브</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + g.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -123,5 +123,6 @@
             </div>
         </div>
         <script src="./js/index.js" charset="UTF-8"></script>
+        <script src="./js/about.js" charset="UTF-8"></script>
     </body>
 </html>
