--- a/about4.html
+++ b/about4.html
@@ -34,39 +34,39 @@
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
-                        <li class="fooditem">
-                            <figure class="fig">
+                        <li class="fooditem" id="a" value="2">
+                            <figure class="fig" >
                                 <img src="./imges/jully.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">줄리 도넛</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양로 24 은가비 1층 줄리도넛</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + a.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="b" value="6">
                             <figure class="fig">
                                 <img src="./imges/배러댄와플.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">배러댄와플</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 669-7</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + b.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="c" value="7">
                             <figure class="fig">
-                                <img src="./imges/제이네.jpg"/>
+                                <img src="./imges/블루웨이.jpg"/>
                                 <figcaption>
                                     <span>
-                                        <h2 class="itemName">제이네 공방</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <h2 class="itemName">블루웨이</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대학로295길 16</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + c.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -75,5 +75,6 @@
             </div>
         </div>
         <script src="./js/index.js" charset="UTF-8"></script>
+        <script src="./js/about.js" charset="UTF-8"></script>
     </body>
 </html>
