add: 네이버 지도 api를 통한 지도 추가

--- a/about1.html
+++ b/about1.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./css/about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
+        <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=nxq7xzy3x0&submodules=geocoder"></script>
     </head>
     <body>
         <div class="main">
@@ -58,6 +59,7 @@
                         <div class="cell"><p class="menu3"></p></div>
                     </div>
                 </div>
+                <div id="map" style="width:100%; height:280px; margin-top: 20px;"></div>
             </div>
         </div>
         <script src="./js/data.js"></script>
