--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>하양 맛집 소개</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="./css/main.css">
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </head>
     <body>
-        <div class="main">
+        <header>
             <nav class="navbar">
                 <div class="nav_logo">
                     <a href="#" class="nav_toggleBtn">
@@ -27,11 +29,41 @@
                     <li><a href="about4.html">카페/디저트</a></li>
                 </ul>
             </nav>
+        </header>
+        <div class="main">
             <div class="inner">
-                <p>주인장의 하양 맛집 컬렉숀 <br/>
-                    주인장의 또간집을 둘러보세요!</p>
+                <p>✨ 주인장의 하양 맛집 컬렉션 ✨</p>
             </div>
-            <div class="grid-container">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imges/1058.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            
+            <!-- <div class="grid-container">
                 <div class="location-listing">
                     <a class="location-title">미미관 마라탕</a>
                     <div class="location-image">
@@ -80,11 +112,12 @@
                         <img src="./imges/퀴다.jpg"/>
                     </div>
                 </div>
-            </div>
+            </div> -->
+            
             <button type="button" class="moreBtn">더보기</button>
         </div>
-        <script src="./js/data.js" charset="UTF-8"></script>
         <script src="./js/index.js" charset="UTF-8"></script>
+        <script src="./js/data.js" charset="UTF-8"></script>
         <script src="./js/jquery.js"></script>
     </body>
 </html>
