modify : 앞뒤 버튼 추가, 이미지 박스 그림자 추가, 한줄 설명 추가

--- a/index.html
+++ b/index.html
@@ -32,35 +32,55 @@
         </header>
         <div class="main">
             <div class="inner">
-                <p>✨ 주인장의 하양 맛집 컬렉션 ✨</p>
+                <p>✨주인장의 하양 맛집 컬렉션✨</p>
             </div>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/1058.jpg" alt="">
+                        </div>
+                        <p>라~멘이 먹고 싶을 때!</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/스시카츠.jpg" alt="">
+                        </div>
+                        <p>퀄리티 괜찮은 초밥집</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/하양돈부리.jpg" alt="">
+                        </div>
+                        <p>가성비가 필요할 때!</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/jully.jpg" alt="">
+                        </div>
+                        <p>크림도넛 맛집</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/미미관.jpg" alt="">
+                        </div>
+                        <p>주인장 최애 마라탕집</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/혼샤브.jpg" alt="">
+                        </div>
+                        <p>혼밥하기 좋은 곳</p>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./imges/1058.jpg" alt="">
+                        <div class="swiper-image">
+                            <img src="./imges/퀴다.jpg" alt="">
+                        </div>
+                        <p>양식은 여기다!</p>
                     </div>
                 </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
             
             <!-- <div class="grid-container">
