--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>하양 맛집 소개</title>
+        <title>뭐먹양|하양 맛집 소개</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="./css/main.css">
