--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko-KR">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="./css/main.css">
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </head>
     <body>
@@ -133,11 +131,8 @@
                     </div>
                 </div>
             </div> -->
-            
-            <button type="button" class="moreBtn">더보기</button>
         </div>
         <script src="./js/index.js" charset="UTF-8"></script>
         <script src="./js/data.js" charset="UTF-8"></script>
-        <script src="./js/jquery.js"></script>
     </body>
 </html>
