css 수정 및 카카오톡 버튼 추가

--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@
                     <ul class="list">
                         <li class="fooditem" id="a" value="11" >
                             <figure class="fig">
-                                <img src="./imges/유가네.jpg"/>
+                                <img id="figImg" src="./imges/유가네.jpg"/>
                                 <figcaption>
                                     <span>
-                                        <h2 class="itemName">유가네 닭갈비</h2>
+                                        <h2 class="itemName" id="names">유가네 닭갈비</h2>
                                         <p class="itemAd">경북 경산시 하양읍 문화로 2 2층 유가네닭갈비 경산하양점</p>
                                     </span>
                                     <p class="aboutBtn" onclick="location.href='about1.html?' + a.value">정보 더보기</p>
