--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>뭐먹양|하양 맛집 소개</title>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
+        <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+        <script type="text/javascript">
+            Kakao.init('4d14f4750783281f85c6b697ff55c48a');
+        </script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="./css/main.css">
