--- a/about1.html
+++ b/about1.html
@@ -60,9 +60,12 @@
                     </div>
                 </div>
                 <div id="map" style="width:80%; height:280px; margin-top: 20px;"></div>
+                <button onclick=setShare()>카카오톡 공유</button>
+                <button>주소 공유</button>
             </div>
         </div>
         <script src="./js/data.js"></script>
         <script src="./js/about.js"></script>
+        <script src="./js/kakaoShare.js"></script>
     </body>
 </html>
